--- a/font/css/fontello-codes.css
+++ b/font/css/fontello-codes.css
@@ -1,5 +1,4 @@
 
 .icon-pencil:before { content: '\e800'; } /* '' */
 .icon-cog:before { content: '\e801'; } /* '' */
-.icon-spin5:before { content: '\e838'; } /* '' */
-.icon-chart-pie:before { content: '\f200'; } /* '' */
+.icon-clock:before { content: '\e802'; } /* '' */
