--- a/css/_article.scss
+++ b/css/_article.scss
@@ -1,7 +1,7 @@
 section.article {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #e2e2e2;
 
 
