--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'fontello';
-  src: url("./font/font/fontello.eot?57007249");
-  src: url("./font/font/fontello.eot?57007249#iefix") format("embedded-opentype"), url("./font/font/fontello.svg?57007249#fontello") format("svg");
+  src: url("../font/font/fontello.eot?89046249");
+  src: url("../font/font/fontello.eot?89046249#iefix") format("embedded-opentype"), url("../font/font/fontello.woff2?28830010") format("woff2"), url("../font/font/fontello.woff?28830010") format("woff"), url("../font/font/fontello.ttf?28830010") format("truetype"), url("../font/font/fontello.svg?89046249#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -83,7 +83,7 @@ section.navbar-fluid div.navbar div.navigacja div.menu1 > a {
   margin: 0 2rem;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   color: #1c8d9c;
   font-family: 'raleway';
 }
@@ -311,9 +311,9 @@ section.article {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #e2e2e2;
 }
 
@@ -547,7 +547,7 @@ div.notes2 {
       -ms-flex-pack: center;
           justify-content: center;
   font-family: 'raleway', sans-serif;
-  background-color: #c0c0c0;
+  background-color: #d9d9d9;
   padding-top: 8rem;
 }
 
@@ -573,8 +573,10 @@ div.notes2 div.cytaty {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #c0c0c0;
+  background-color: #d9d9d9;
   width: 100rem;
+  font-style: italic;
+  font-weight: bold;
 }
 
 div.notes2 div.cytaty div.all {
