--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,14 @@
 @font-face {
     font-family: 'fontello';
-    src: url('./font/font/fontello.eot?57007249');
-    src: url('./font/font/fontello.eot?57007249#iefix') format('embedded-opentype'),
-         url('./font/font/fontello.svg?57007249#fontello') format('svg');
+    src: url('../font/font/fontello.eot?89046249');
+    src: url('../font/font/fontello.eot?89046249#iefix') format('embedded-opentype'),
+    url('../font/font/fontello.woff2?28830010') format('woff2'),
+       url('../font/font/fontello.woff?28830010') format('woff'),
+       url('../font/font/fontello.ttf?28830010') format('truetype'),
+         url('../font/font/fontello.svg?89046249#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
   }
-  
 html {
     font-size: 10px;
 
