--- a/font/css/fontello.css
+++ b/font/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?68407229');
-  src: url('../font/fontello.eot?68407229#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?68407229') format('woff2'),
-       url('../font/fontello.woff?68407229') format('woff'),
-       url('../font/fontello.ttf?68407229') format('truetype'),
-       url('../font/fontello.svg?68407229#fontello') format('svg');
+  src: url('../font/fontello.eot?7632527');
+  src: url('../font/fontello.eot?7632527#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7632527') format('woff2'),
+       url('../font/fontello.woff?7632527') format('woff'),
+       url('../font/fontello.ttf?7632527') format('truetype'),
+       url('../font/fontello.svg?7632527#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?68407229#fontello') format('svg');
+    src: url('../font/fontello.svg?7632527#fontello') format('svg');
   }
 }
 */
@@ -57,5 +57,4 @@
  
 .icon-pencil:before { content: '\e800'; } /* '' */
 .icon-cog:before { content: '\e801'; } /* '' */
-.icon-spin5:before { content: '\e838'; } /* '' */
-.icon-chart-pie:before { content: '\f200'; } /* '' */
+.icon-clock:before { content: '\e802'; } /* '' */
